@@ -11,8 +11,8 @@
 
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencyManagement>
@@ -27,6 +27,19 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
+        <!--        <dependency>-->
+        <!--            <groupId>com.sun</groupId>-->
+        <!--            <artifactId>tools</artifactId>-->
+        <!--            <version>11</version>-->
+        <!--            <scope>system</scope>-->
+        <!--            <systemPath>${java.home}/lib/jrt-fs.jar</systemPath>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.32</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.crabapples</groupId>
             <artifactId>base-project</artifactId>
@@ -86,9 +99,16 @@
                     <source>11</source>
                     <target>11</target>
                     <compilerArgs>
-                        <!-- 添加模块打开选项 -->
-                        <arg>--add-modules</arg>
-                        <arg>jdk.compiler</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                     </compilerArgs>
                     <!--                    <annotationProcessorPaths>-->
                     <!--                        <path>-->
